Shorten the workout type and return as well

--- a/notebooks/0.3.-first_plotting.ipynb
+++ b/notebooks/0.3.-first_plotting.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
@@ -32,7 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workouts_df = parser.extract_workouts()"
+    "workouts_df, workout_types = parser.extract_workouts()\n",
+    "workout_types"
    ]
   },
   {
@@ -48,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "running_df = workouts_df[workouts_df[\"workoutActivityType\"] == \"HKWorkoutActivityTypeRunning\"].copy()\n",
+    "running_df = workouts_df[workouts_df[\"workoutActivityType\"] == \"Running\"].copy()\n",
     "running_df.head()"
    ]
   },
@@ -147,6 +150,13 @@
    "source": [
     "jointplot = sns.jointplot(\"dayOffset\", \"minutesPerKm\", data=running_df, kind=\"reg\", xlim=(-10, running_df.dayOffset.max() + 10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
