Implement class for Workouts data (#4)
* hide more generic function

* Shorten the workout type and return as well

* performance improvements by storing extractions and some visibility changes

* Introduce Singleton pattern for AppleHealthParser

* minor changes and documentation updates

* Implement class Workouts with features:
- parse and hold data
- provide plotting functionality

* New plot + examples with package

--- a/notebooks/0.3.-first_plotting.ipynb
+++ b/notebooks/0.3.-first_plotting.ipynb
@@ -6,15 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
-    "from health_tracking import AppleHealthParser\n",
+    "import seaborn as sns\n",
     "\n",
-    "sns.set()\n",
-    "%matplotlib inline"
+    "from health_tracking import AppleHealthParser"
    ]
   },
   {
@@ -32,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workouts_df = parser.extract_workouts()"
+    "workouts_df, workout_types = parser.extract_workouts()\n",
+    "workout_types"
    ]
   },
   {
@@ -48,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "running_df = workouts_df[workouts_df[\"workoutActivityType\"] == \"HKWorkoutActivityTypeRunning\"].copy()\n",
+    "running_df = workouts_df[workouts_df[\"workoutActivityType\"] == \"running\"].copy().reset_index()\n",
     "running_df.head()"
    ]
   },
@@ -68,7 +70,7 @@
     "def minutes_per_km(row):\n",
     "    result = 0\n",
     "    try:\n",
-    "        result = row.duration / row.totalDistance\n",
+    "        result = row[\"duration\"] / row[\"totalDistance\"]\n",
     "    \n",
     "    except:\n",
     "        pass\n",
@@ -117,7 +119,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Use Natural Distance for Days"
+    "#### Use \"Natural Distance\" for Days\n",
+    "\n",
+    "It's not possible to plot a timestamp. Therefore, use day offsets starting with the first training day.\n",
+    "\n",
+    "Fixing distance of time axis (x-axis)for workouts, increases the \"correctness\" of the plot."
    ]
   },
   {
@@ -126,8 +132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "day_zero = running_df.creationDate[0]\n",
-    "day_offset = running_df.creationDate[running_df.shape[0]] - running_df.creationDate[0]"
+    "first_workout = running_df[\"creationDate\"][0]\n",
+    "last_workout = running_df[\"creationDate\"][running_df.shape[0]]"
    ]
   },
   {
@@ -136,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "running_df[\"dayOffset\"] = running_df.apply(lambda row: (row.creationDate - day_zero).days, axis=1)"
+    "running_df[\"dayOffset\"] = running_df.apply(lambda row: (row[\"creationDate\"] - first_workout).days, axis=1)"
    ]
   },
   {
@@ -145,8 +151,135 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jointplot = sns.jointplot(\"dayOffset\", \"minutesPerKm\", data=running_df, kind=\"reg\", xlim=(-10, running_df.dayOffset.max() + 10))"
+    "sns.jointplot(\"dayOffset\", \"minutesPerKm\", data=running_df, kind=\"reg\", xlim=(-10, running_df[\"dayOffset\"].max() + 10)) ## No constatns!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combine `minutesPerKm` and `totalDistance`\n",
+    "\n",
+    "Add vertical lines for new years."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_year_offsets(first_workout, last_workout):\n",
+    "    \n",
+    "    new_years = last_workout.year - first_workout.year\n",
+    "    result = []\n",
+    "    \n",
+    "    for i in range(new_years):\n",
+    "        new_year_offset = pd.Timestamp(f\"1.1.{first_workout.year + i + 1}\", tz=first_workout.tz) - first_workout\n",
+    "        result.append(new_year_offset.days)\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "scatter = sns.scatterplot(\"dayOffset\", \"minutesPerKm\", data=running_df, hue=\"totalDistance\")\n",
+    "\n",
+    "max_y = running_df[\"minutesPerKm\"].max()\n",
+    "\n",
+    "for new_year_offset in get_year_offsets(first_workout, last_workout):\n",
+    "    plt.axvline(new_year_offset, 0, max_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Same Plots as above with Package Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from health_tracking.workouts import Workouts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workouts = Workouts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workouts.workout_types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workouts[\"runnings\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workouts.plot(\"dayOffset\", \"minutesPerKm\", \"joint\", outlier=(4, 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asdf = workouts.plot(\"dayOffset\", \"minutesPerKm\", \"scatter\", z=\"totalDistance\", outlier=(4, 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
