Some cleanup and descriptions

--- a/notebooks/0.3.-first_plotting.ipynb
+++ b/notebooks/0.3.-first_plotting.ipynb
@@ -6,16 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
     "import pandas as pd\n",
-    "\n",
-    "from matplotlib import pyplot as plt\n",
-    "%matplotlib inline\n",
     "\n",
     "import seaborn as sns\n",
     "\n",
-    "from health_tracking import AppleHealthParser"
+    "from health_tracking import AppleHealthParser\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -151,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.jointplot(\"dayOffset\", \"minutesPerKm\", data=running_df, kind=\"reg\", xlim=(-10, running_df[\"dayOffset\"].max() + 10)) ## No constatns!"
+    "jointplot = sns.jointplot(\"dayOffset\", \"minutesPerKm\", data=running_df, kind=\"reg\", xlim=(-10, running_df[\"dayOffset\"].max() + 10))"
    ]
   },
   {
@@ -184,19 +181,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "scatter = sns.scatterplot(\"dayOffset\", \"minutesPerKm\", data=running_df, hue=\"totalDistance\")\n",
+    "scatter = sns.scatterplot(\"dayOffset\", \"minutesPerKm\", data=running_df, hue=\"totalDistance\", )\n",
     "\n",
     "max_y = running_df[\"minutesPerKm\"].max()\n",
     "\n",
     "for new_year_offset in get_year_offsets(first_workout, last_workout):\n",
-    "    plt.axvline(new_year_offset, 0, max_y)"
+    "    scatter.axvline(new_year_offset, 0, max_y)"
    ]
   },
   {
@@ -262,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "workouts.plot(\"dayOffset\", \"minutesPerKm\", \"joint\", outlier=(4, 8))"
+    "joint_plot = workouts.plot(\"dayOffset\", \"minutesPerKm\", \"joint\", outlier=(4, 8))"
    ]
   },
   {
@@ -271,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "asdf = workouts.plot(\"dayOffset\", \"minutesPerKm\", \"scatter\", z=\"totalDistance\", outlier=(4, 8))"
+    "scatter_plot = workouts.plot(\"dayOffset\", \"minutesPerKm\", \"scatter\", z=\"totalDistance\", outlier=(4, 8))"
    ]
   },
   {
